Read for metrices

--- a/Lab2/parallel-kmeans/Makefile
+++ b/Lab2/parallel-kmeans/Makefile
@@ -80,6 +80,5 @@ clean:
 		Image_data/*.cluster_centres.nc Image_data/*.membership.nc
 
 check: all
-	# sequential K-means ---------------------------------------------------
-	./seq_main -o -b -n 1000 -i Image_data/color17695.bin
-	#./seq_main -o    -n 4 -i Image_data/color100.txt
+	# parallel K-means ---------------------------------------------------
+	./seq_main -q -o -b -n 1000 -i Image_data/color17695.bin >> metrices.txt
